fix #toggleLang overlap (again...)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: "RSU";
-	padding-top: 70px;
+	/*padding-top: 70px;*/
 	color: #666;
 	-webkit-font-feature-settings: 'tnum';
     -moz-font-feature-settings: 'tnum';
